# Lumache

./: .gitignore  README.md  api.html  justfile  pyproject.toml  searchindex.js  usage.html
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
docs/: api.rst  conf.py
docs/_build/: .buildinfo  genindex.html  index.html  search.html
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: api.rst  conf.py  index.rst  usage.rst
doctrees/: usage.doctree
html/: usage.html
lumache/: lumache.py
